<resources>
    <string name="app_name">LaundryApp</string>

    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="permission_granted">camera permission granted</string>

    <string name="pic_dialog_title">Add Photo</string>
    <string name="pic_dialog_album">Choose from gallery</string>
    <string name="pic_dialog_camera">Take Photo</string>
    <string name="pic_dialog_cancel">Cancel</string>

    <string name="cancel">취소</string>
    <string name="confirm">확인</string>

    <string name="finished_laundry_check_box">완료 항목 숨김</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">Don\'t have an account</string>
    <string name="maintain_user_session">Remember Me</string>

    <string name="goto_login_page">Don\'t have an account.\nSign Up Here</string>
    <string name="goto_sign_up_page">Already have an account.\nLogin Here</string>
    <string name="login_title">Account Login</string>
    <string name="sign_up_title">New User Sign Up</string>

    <string name="reset_password">Reset Password</string>

    <string name="password">password</string>
    <string name="email">email</string>
    <string name="email_hint">user@gmail.com</string>
    <string name="password_hint">password</string>

    <string name="password_lost">forgot password?</string>

    <string name="laundry_brand">brand</string>
    <string name="laundry_kind">kind</string>
    <string name="laundry_price">price</string>
    
    <string name="laundry_status_change">Laundry Status Change</string>

    <string name="search_view_hint">Search ...</string>
</resources>
