<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.example.laundryapp.ui.auth.AuthViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray4"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/sign_up_title"
                android:textColor="#fff"
                android:textSize="26sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_title"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="30dp"
                android:background="@android:color/white"
                android:elevation="4dp"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:labelFor="@id/text_email"
                        android:text="@string/email" />

                    <EditText
                        android:id="@+id/text_email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="10dp"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:text="@={vm.observableEmail}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:labelFor="@id/edit_text_password"
                        android:text="@string/password" />

                    <EditText
                        android:id="@+id/edit_text_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@={vm.observablePassWord}" />

                    <Button
                        android:id="@+id/button_sign_up"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"
                        android:background="#d67601"
                        android:onClick="@{(view) -> vm.register(view)}"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_view_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:onClick="@{(v) -> vm.goToLogin(v)}"
                        android:text="@string/goto_sign_up_page"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textSize="12dp" />
                </LinearLayout>

            </RelativeLayout>

            <ImageButton
                android:id="@+id/user_profile_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/login_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:elevation="4dp" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>
</layout>