<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="item"
            type="com.example.laundryapp.data.model.OrderModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:text="2020.04.23"
                android:textSize="8dp" />

            <TextView
                android:id="@+id/tv_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_date"
                android:layout_marginLeft="48dp"
                android:textSize="14dp"
                android:hint="@string/laundry_brand"/>

            <TextView
                android:id="@+id/tv_kind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_date"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@id/tv_brand"
                android:textSize="14dp"
                android:hint="@string/laundry_kind"/>

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_date"
                android:layout_alignParentRight="true"
                android:textSize="14dp"
                android:layout_marginRight="8dp"
                android:hint="@string/laundry_price" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/tv_brand"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:background="@android:color/black" />

        </RelativeLayout>

    </LinearLayout>

</layout>
